# lprnet-infer

./: .gitignore  5000_chinese_lprnet_best_0_05484444214209147.pth  CCPD2019_sample_images.py  README.md  core_infer.py  crop_images.py  label_image.py  main.py  main_cam.py  paddle_ocr.py  present_lprnet.ipynb  pyproject.toml  split_dataset.py
.ipynb_checkpoints/: present_lprnet-checkpoint.ipynb
lprnet/: lprnet.py  utils.py
