[project]
name = "lprnet-infer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inference>=0.57.2",
    "jupyter>=1.1.1",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.2.0",
    "rise>=5.7.1",
    "supervision>=0.26.1",
    "ultralytics>=8.3.203",
]
